BUG BacklogSI-5400: Chrome - New Visualize: Redundant horizontal scroll bar in the side bar
QA: Make sure there is no horizontal scrollbar

--- a/app/styles/grid-sidebar.sass
+++ b/app/styles/grid-sidebar.sass
@@ -169,7 +169,8 @@
       @include sidebar-colors($sidebar_designer_configuration_tab_color_tab)
 
     .panes
-      overflow: auto
+      overflow-y: auto
+      overflow-x: hidden
       position: relative
 
 // sidebar button styles
